2008-09-24 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-03-22
	* new requirements for RecExCommon
	
2008-09-10  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-03-21
        * Fix to requirements for checkreq warning

2008-08-15 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-03-20
	* Inserting HitMaps

2008-08-15 Damien Prieur <damien.prieur@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-03-19
	* TrigT1CaloMonitoring_AthenaPT_topOptions.py & TrigT1CaloMonitoring_forRecExCommission.py:
	  replace ATLASCosmicFlags.doOnline with athenaCommonFlags.isOnline 
	  
2008-07-25 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* ATLASCosmicFlags -> rec, update AthenaPT
	* Tag as TrigT1CaloMonitoring-00-03-17

2008-06-12 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Timing issues of Ppms changed
	* Tag as TrigT1CaloMonitoring-00-03-16

2008-06-10 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Rearrangement of Error Histograms 
	* Tag as TrigT1CaloMonitoring-00-03-15

2008-06-02  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * In CP simulation check overview plots flag steps needing
          Trigger Menu in red.
        * Tag as TrigT1CaloMonitoring-00-03-14

2008-05-30  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Use overlap data in RoI simulation check
        * Tag as TrigT1CaloMonitoring-00-03-13

2008-05-28  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Add CPM Tower mismatch plots by serialiser FPGA
        * Tag as TrigT1CaloMonitoring-00-03-12

2008-05-19 Damien Prieur <damien.prieur@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-03-11
	* TrigT1CaloMonitoring_forRecExCommission.py:
	  commented several xxxxxx.OutputLevel=VERBOSE

2008-05-16 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Bugfix in binning and Ppm crates
	* Tag as TrigT1CaloMonitoring-00-03-10

2008-05-07  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Bugfix in TrigT1CaloCpmMonTool.cxx