@@ -1,4 +1,5 @@
 #include "TrigT1CaloMonitoring/TrigT1CaloCpmMonTool.h"
+#include "TrigT1CaloMonitoring/TrigT1CaloRodMonTool.h"
 #include "TrigT1CaloMonitoring/CPMSimBSMon.h"
 #include "TrigT1CaloMonitoring/PPrMon.h"
 #include "TrigT1CaloMonitoring/JEMMon.h"
@@ -10,6 +11,7 @@
 #include "GaudiKernel/DeclareFactoryEntries.h"
 
 DECLARE_TOOL_FACTORY(TrigT1CaloCpmMonTool )
+DECLARE_TOOL_FACTORY(TrigT1CaloRodMonTool )
 DECLARE_TOOL_FACTORY(CPMSimBSMon)
 DECLARE_TOOL_FACTORY(PPrMon)
 DECLARE_TOOL_FACTORY(JEMMon)
@@ -19,6 +21,7 @@ DECLARE_TOOL_FACTORY(PPrPerfMon)
 
 DECLARE_FACTORY_ENTRIES(TrigT1CaloMonitoring) {
   DECLARE_ALGTOOL(TrigT1CaloCpmMonTool );
+  DECLARE_ALGTOOL(TrigT1CaloRodMonTool );
   DECLARE_ALGTOOL(CPMSimBSMon);
   DECLARE_ALGTOOL(PPrMon);
   DECLARE_ALGTOOL(JEMMon);
